Correct extension API permission ID order for kEnterpriseReportingPrivate

Change the order to match the enum.xml.

Bug: 843141
Change-Id: Ib8bf9be16aaf7a5d1f9369762bd966fb8c06b5a8
Reviewed-on: https://chromium-review.googlesource.com/1059579
Commit-Queue: Owen Min <zmin@chromium.org>
Reviewed-by: Devlin <rdevlin.cronin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#558733}