extensions/common/permissions/api_permission.h
@@ -102,7 +102,6 @@ class APIPermission {
     kEmbeddedExtensionOptions,
     kEnterprisePlatformKeys,
     kEnterprisePlatformKeysPrivate,
-    kEnterpriseReportingPrivate,
     kDeleted_ExperienceSamplingPrivate,
     kExperimental,
     kExtensionView,
@@ -253,6 +252,7 @@ class APIPermission {
     kDeclarativeNetRequest,
     kLockWindowFullscreenPrivate,
     kWebrtcLoggingPrivateAudioDebug,
+    kEnterpriseReportingPrivate,
     kCecPrivate,
     // Last entry: Add new entries above and ensure to update the
     // "ExtensionPermission3" enum in tools/metrics/histograms/histograms.xml
